--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.1.6",
     "embla-carousel-react": "^8.1.6",
+    "framer-motion": "^11.2.14",
     "lucide-react": "^0.401.0",
     "next": "14.2.4",
     "react": "^18",
